...
              Padding(
                padding: const EdgeInsets.all(12),
                child: Row(
                  children: [
                    Expanded(
                      child: TextField(
                        key: const Key('todoField'),
                        controller: textController,
                        decoration: const InputDecoration(
                          hintText: 'Enter todo',
                        ),
                      ),
                    ),
                    ElevatedButton(
                      key: const Key('addButton'),
                      onPressed: () {
                        widget.controller.addTodo(
                          textController.text,
                        );
                        textController.clear();
                      },
...
